--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Official website of the Sierra Leone Swimming, Diving & Water Polo Association (SLSDWA)">
-    <title>Sierra Leone Aquatics | SLSDWA</title>
+    <meta name="description" content="Official website of the Sierra Leone Swimming Federation">
+    <title>Sierra Leone Aquatics</title>
   </head>
   <body>
     <div id="root"></div>
